Use CC:T's version of dan200.computercraft.core