@@ -11,10 +11,7 @@ import com.google.common.cache.LoadingCache;
 import com.google.common.primitives.Primitives;
 import com.google.common.reflect.TypeToken;
 import dan200.computercraft.ComputerCraft;
-import dan200.computercraft.api.lua.IArguments;
-import dan200.computercraft.api.lua.LuaException;
-import dan200.computercraft.api.lua.LuaFunction;
-import dan200.computercraft.api.lua.MethodResult;
+import dan200.computercraft.api.lua.*;
 import org.objectweb.asm.ClassWriter;
 import org.objectweb.asm.MethodVisitor;
 import org.objectweb.asm.Type;
@@ -53,10 +50,14 @@ public final class Generator<T>
     private final String methodDesc;
 
     private final Function<T, T> wrap;
-    private final LoadingCache<Method, Optional<T>> methodCache = CacheBuilder.newBuilder()
-        .build( CacheLoader.from( catching( this::build, Optional.empty() ) ) );
-    private final LoadingCache<Class<?>, List<NamedMethod<T>>> classCache = CacheBuilder.newBuilder()
+
+    private final LoadingCache<Class<?>, List<NamedMethod<T>>> classCache = CacheBuilder
+        .newBuilder()
         .build( CacheLoader.from( catching( this::build, Collections.emptyList() ) ) );
+
+    private final LoadingCache<Method, Optional<T>> methodCache = CacheBuilder
+        .newBuilder()
+        .build( CacheLoader.from( catching( this::build, Optional.empty() ) ) );
 
     Generator( Class<T> base, List<Class<?>> context, Function<T, T> wrap )
     {
@@ -66,13 +67,8 @@ public final class Generator<T>
         this.wrap = wrap;
 
         StringBuilder methodDesc = new StringBuilder().append( "(Ljava/lang/Object;" );
-        for( Class<?> klass : context )
-        {
-            methodDesc.append( Type.getDescriptor( klass ) );
-        }
-        methodDesc.append( DESC_ARGUMENTS )
-            .append( ")" )
-            .append( DESC_METHOD_RESULT );
+        for( Class<?> klass : context ) methodDesc.append( Type.getDescriptor( klass ) );
+        methodDesc.append( DESC_ARGUMENTS ).append( ")" ).append( DESC_METHOD_RESULT );
         this.methodDesc = methodDesc.toString();
     }
 
@@ -81,7 +77,7 @@ public final class Generator<T>
     {
         try
         {
-            return this.classCache.get( klass );
+            return classCache.get( klass );
         }
         catch( ExecutionException e )
         {
@@ -97,10 +93,7 @@ public final class Generator<T>
         for( Method method : klass.getMethods() )
         {
             LuaFunction annotation = method.getAnnotation( LuaFunction.class );
-            if( annotation == null )
-            {
-                continue;
-            }
+            if( annotation == null ) continue;
 
             if( Modifier.isStatic( method.getModifiers() ) )
             {
@@ -108,52 +101,32 @@ public final class Generator<T>
                 continue;
             }
 
-            T instance = this.methodCache.getUnchecked( method )
-                .orElse( null );
-            if( instance == null )
-            {
-                continue;
-            }
+            T instance = methodCache.getUnchecked( method ).orElse( null );
+            if( instance == null ) continue;
 
-            if( methods == null )
-            {
-                methods = new ArrayList<>();
-            }
-            this.addMethod( methods, method, annotation, instance );
+            if( methods == null ) methods = new ArrayList<>();
+            addMethod( methods, method, annotation, instance );
         }
 
         for( GenericMethod method : GenericMethod.all() )
         {
             if( !method.target.isAssignableFrom( klass ) ) continue;
 
-            T instance = this.methodCache.getUnchecked( method.method )
-                .orElse( null );
-            if( instance == null )
-            {
-                continue;
-            }
+            T instance = methodCache.getUnchecked( method.method ).orElse( null );
+            if( instance == null ) continue;
 
-            if( methods == null )
-            {
-                methods = new ArrayList<>();
-            }
-            this.addMethod( methods, method.method, method.annotation, instance );
+            if( methods == null ) methods = new ArrayList<>();
+            addMethod( methods, method.method, method.annotation, instance );
         }
 
-        if( methods == null )
-        {
-            return Collections.emptyList();
-        }
+        if( methods == null ) return Collections.emptyList();
         methods.trimToSize();
         return Collections.unmodifiableList( methods );
     }
 
     private void addMethod( List<NamedMethod<T>> methods, Method method, LuaFunction annotation, T instance )
     {
-        if( annotation.mainThread() )
-        {
-            instance = this.wrap.apply( instance );
-        }
+        if( annotation.mainThread() ) instance = wrap.apply( instance );
 
         String[] names = annotation.value();
         boolean isSimple = method.getReturnType() != MethodResult.class && !annotation.mainThread();
@@ -173,8 +146,7 @@ public final class Generator<T>
     @Nonnull
     private Optional<T> build( Method method )
     {
-        String name = method.getDeclaringClass()
-            .getName() + "." + method.getName();
+        String name = method.getDeclaringClass().getName() + "." + method.getName();
         int modifiers = method.getModifiers();
 
         // Instance methods must be final - this prevents them being overridden and potentially exposed twice.
@@ -189,8 +161,7 @@ public final class Generator<T>
             return Optional.empty();
         }
 
-        if( !Modifier.isPublic( method.getDeclaringClass()
-            .getModifiers() ) )
+        if( !Modifier.isPublic( method.getDeclaringClass().getModifiers() ) )
         {
             ComputerCraft.log.error( "Lua Method {} should be on a public class.", name );
             return Optional.empty();
@@ -214,21 +185,12 @@ public final class Generator<T>
 
         try
         {
-            String className = method.getDeclaringClass()
-                .getName() + "$cc$" + method.getName() + METHOD_ID.getAndIncrement();
-            byte[] bytes = this.generate( className, target, method );
-            if( bytes == null )
-            {
-                return Optional.empty();
-            }
+            String className = method.getDeclaringClass().getName() + "$cc$" + method.getName() + METHOD_ID.getAndIncrement();
+            byte[] bytes = generate( className, target, method );
+            if( bytes == null ) return Optional.empty();
 
-            Class<?> klass = DeclaringClassLoader.INSTANCE.define( className,
-                bytes,
-                method.getDeclaringClass()
-                    .getProtectionDomain() );
-            return Optional.of( klass.asSubclass( this.base )
-                .getDeclaredConstructor()
-                .newInstance() );
+            Class<?> klass = DeclaringClassLoader.INSTANCE.define( className, bytes, method.getDeclaringClass().getProtectionDomain() );
+            return Optional.of( klass.asSubclass( base ).getDeclaredConstructor().newInstance() );
         }
         catch( ReflectiveOperationException | ClassFormatError | RuntimeException e )
         {
@@ -245,7 +207,7 @@ public final class Generator<T>
 
         // Construct a public final class which extends Object and implements MethodInstance.Delegate
         ClassWriter cw = new ClassWriter( ClassWriter.COMPUTE_FRAMES | ClassWriter.COMPUTE_MAXS );
-        cw.visit( V1_8, ACC_PUBLIC | ACC_FINAL, internalName, null, "java/lang/Object", this.interfaces );
+        cw.visit( V1_8, ACC_PUBLIC | ACC_FINAL, internalName, null, "java/lang/Object", interfaces );
         cw.visitSource( "CC generated method", null );
 
         { // Constructor just invokes super.
@@ -259,7 +221,7 @@ public final class Generator<T>
         }
 
         {
-            MethodVisitor mw = cw.visitMethod( ACC_PUBLIC, METHOD_NAME, this.methodDesc, null, EXCEPTIONS );
+            MethodVisitor mw = cw.visitMethod( ACC_PUBLIC, METHOD_NAME, methodDesc, null, EXCEPTIONS );
             mw.visitCode();
 
             // If we're an instance method, load the this parameter.
@@ -272,22 +234,16 @@ public final class Generator<T>
             int argIndex = 0;
             for( java.lang.reflect.Type genericArg : method.getGenericParameterTypes() )
             {
-                Boolean loadedArg = this.loadArg( mw, target, method, genericArg, argIndex );
-                if( loadedArg == null )
-                {
-                    return null;
-                }
-                if( loadedArg )
-                {
-                    argIndex++;
-                }
+                Boolean loadedArg = loadArg( mw, target, method, genericArg, argIndex );
+                if( loadedArg == null ) return null;
+                if( loadedArg ) argIndex++;
             }
 
-            mw.visitMethodInsn( Modifier.isStatic( method.getModifiers() ) ? INVOKESTATIC : INVOKEVIRTUAL,
-                Type.getInternalName( method.getDeclaringClass() ),
-                method.getName(),
-                Type.getMethodDescriptor( method ),
-                false );
+            mw.visitMethodInsn(
+                Modifier.isStatic( method.getModifiers() ) ? INVOKESTATIC : INVOKEVIRTUAL,
+                Type.getInternalName( method.getDeclaringClass() ), method.getName(),
+                Type.getMethodDescriptor( method ), false
+            );
 
             // We allow a reasonable amount of flexibility on the return value's type. Alongside the obvious MethodResult,
             // we convert basic types into an immediate result.
@@ -301,11 +257,7 @@ public final class Generator<T>
                 else if( ret.isPrimitive() )
                 {
                     Class<?> boxed = Primitives.wrap( ret );
-                    mw.visitMethodInsn( INVOKESTATIC,
-                        Type.getInternalName( boxed ),
-                        "valueOf",
-                        "(" + Type.getDescriptor( ret ) + ")" + Type.getDescriptor( boxed ),
-                        false );
+                    mw.visitMethodInsn( INVOKESTATIC, Type.getInternalName( boxed ), "valueOf", "(" + Type.getDescriptor( ret ) + ")" + Type.getDescriptor( boxed ), false );
                     mw.visitMethodInsn( INVOKESTATIC, INTERNAL_METHOD_RESULT, "of", "(Ljava/lang/Object;)" + DESC_METHOD_RESULT, false );
                 }
                 else if( ret == Object[].class )
@@ -339,18 +291,15 @@ public final class Generator<T>
         }
 
         Class<?> arg = Reflect.getRawType( method, genericArg, true );
-        if( arg == null )
-        {
-            return null;
-        }
+        if( arg == null ) return null;
 
         if( arg == IArguments.class )
         {
-            mw.visitVarInsn( ALOAD, 2 + this.context.size() );
+            mw.visitVarInsn( ALOAD, 2 + context.size() );
             return false;
         }
 
-        int idx = this.context.indexOf( arg );
+        int idx = context.indexOf( arg );
         if( idx >= 0 )
         {
             mw.visitVarInsn( ALOAD, 2 + idx );
@@ -359,19 +308,12 @@ public final class Generator<T>
 
         if( arg == Optional.class )
         {
-            Class<?> klass = Reflect.getRawType( method,
-                TypeToken.of( genericArg )
-                    .resolveType( Reflect.OPTIONAL_IN )
-                    .getType(),
-                false );
-            if( klass == null )
-            {
-                return null;
-            }
+            Class<?> klass = Reflect.getRawType( method, TypeToken.of( genericArg ).resolveType( Reflect.OPTIONAL_IN ).getType(), false );
+            if( klass == null ) return null;
 
             if( Enum.class.isAssignableFrom( klass ) && klass != Enum.class )
             {
-                mw.visitVarInsn( ALOAD, 2 + this.context.size() );
+                mw.visitVarInsn( ALOAD, 2 + context.size() );
                 Reflect.loadInt( mw, argIndex );
                 mw.visitLdcInsn( Type.getType( klass ) );
                 mw.visitMethodInsn( INVOKEINTERFACE, INTERNAL_ARGUMENTS, "optEnum", "(ILjava/lang/Class;)Ljava/util/Optional;", true );
@@ -381,7 +323,7 @@ public final class Generator<T>
             String name = Reflect.getLuaName( Primitives.unwrap( klass ) );
             if( name != null )
             {
-                mw.visitVarInsn( ALOAD, 2 + this.context.size() );
+                mw.visitVarInsn( ALOAD, 2 + context.size() );
                 Reflect.loadInt( mw, argIndex );
                 mw.visitMethodInsn( INVOKEINTERFACE, INTERNAL_ARGUMENTS, "opt" + name, "(I)Ljava/util/Optional;", true );
                 return true;
@@ -390,7 +332,7 @@ public final class Generator<T>
 
         if( Enum.class.isAssignableFrom( arg ) && arg != Enum.class )
         {
-            mw.visitVarInsn( ALOAD, 2 + this.context.size() );
+            mw.visitVarInsn( ALOAD, 2 + context.size() );
             Reflect.loadInt( mw, argIndex );
             mw.visitLdcInsn( Type.getType( arg ) );
             mw.visitMethodInsn( INVOKEINTERFACE, INTERNAL_ARGUMENTS, "getEnum", "(ILjava/lang/Class;)Ljava/lang/Enum;", true );
@@ -401,22 +343,16 @@ public final class Generator<T>
         String name = arg == Object.class ? "" : Reflect.getLuaName( arg );
         if( name != null )
         {
-            if( Reflect.getRawType( method, genericArg, false ) == null )
-            {
-                return null;
-            }
+            if( Reflect.getRawType( method, genericArg, false ) == null ) return null;
 
-            mw.visitVarInsn( ALOAD, 2 + this.context.size() );
+            mw.visitVarInsn( ALOAD, 2 + context.size() );
             Reflect.loadInt( mw, argIndex );
             mw.visitMethodInsn( INVOKEINTERFACE, INTERNAL_ARGUMENTS, "get" + name, "(I)" + Type.getDescriptor( arg ), true );
             return true;
         }
 
         ComputerCraft.log.error( "Unknown parameter type {} for method {}.{}.",
-            arg.getName(),
-            method.getDeclaringClass()
-                .getName(),
-            method.getName() );
+            arg.getName(), method.getDeclaringClass().getName(), method.getName() );
         return null;
     }
 
